hphp/test/vm/trait_method_modif10.php.expectf
HipHop Fatal error: Cannot re-declare abstract method Base::f() abstract in class Foo in %s on line 8
